# ChangeLog for app-text/poppler
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.446 2015/03/20 15:18:23 dilfridge Exp $

  20 Mar 2015; Andreas K. Huettel <dilfridge@gentoo.org> poppler-0.32.0.ebuild,
  poppler-9999.ebuild:
  Correctly build against libopenjpeg-1 (for now), bug 538282

*poppler-0.32.0 (13 Mar 2015)

  13 Mar 2015; Manuel Rüger <mrueg@gentoo.org> +poppler-0.32.0.ebuild:
  Version bump.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> poppler-0.26.5.ebuild:
  Stable for ppc, wrt bug #523164

  25 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  -poppler-0.28.1.ebuild, -poppler-0.29.0.ebuild:
  Remove old

*poppler-0.31.0 (09 Feb 2015)

  09 Feb 2015; Manuel Rüger <mrueg@gentoo.org> +poppler-0.31.0.ebuild:
  Version bump.

*poppler-0.30.0 (06 Jan 2015)

  06 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +poppler-0.30.0.ebuild:
  Version bump.

  03 Jan 2015; Matthias Maier <tamiko@gentoo.org>
  +files/poppler-0.28.1-fix-multilib-configuration.patch, poppler-0.28.1.ebuild,
  poppler-0.29.0.ebuild:
  workaround for multilib portage, fix qt library locations for 32bit variant

*poppler-0.29.0 (02 Jan 2015)

  02 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +poppler-0.29.0.ebuild:
  Version bump.

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> poppler-0.26.5.ebuild:
  Stable for x86, wrt bug #523164

  03 Dec 2014; Matthias Maier <tamiko@gentoo.org>
  +files/poppler-0.28.1-respect-cflags.patch, poppler-0.28.1.ebuild,
  poppler-9999.ebuild:
  respect cflags, bug #529645; fix live ebuild

  21 Nov 2014; Tobias Klausmann <klausman@gentoo.org> poppler-0.26.5.ebuild:
  Stable on alpha, bug 523164

*poppler-0.28.1 (10 Nov 2014)

  10 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -poppler-0.26.4.ebuild, +poppler-0.28.1.ebuild, poppler-9999.ebuild:
  Version bump

  04 Nov 2014; Markus Meier <maekke@gentoo.org> poppler-0.26.5.ebuild:
  arm stable, bug #523164
