@@ -6,31 +6,29 @@ AUX poppler-0.28.1-fix-multilib-configuration.patch 813 SHA256 c2107ff3bfdbb4176
 AUX poppler-0.28.1-respect-cflags.patch 2733 SHA256 f654924d669cc61ac5be0d3d6075e835ae8b5d5c9c849ad73e86f7996833383d SHA512 f36671cb51cd6c45f2db5fedcae73763b300067f732d8c546d3f0b30af6aa7fcdcfe07e5349d43d93cee0f0a420f85c031b3482ce8bc514a5180e1c968bb465a WHIRLPOOL 53b1ef9d4f052fc0cafaa3a645d11f9a615861d505abec4412721b4a8a9d93c7fa624d8be676f248f81a4d4094826e36ab6c1f2f84577fd54c17be9bc89465b4
 DIST poppler-0.24.5.tar.xz 1512476 SHA256 a2654910100c923c44e366242495e226db2798254f2fa2781138867348759f84 SHA512 dfb40f7d864614f4ad7e8729334931c4b40c48c0dc3d7a8c33b14134cf13c61f8a562cc790a08bee4a43c2c29e587a9d26330437858d465e18ceafd69521250c WHIRLPOOL 066924beb46e58c2906a3b278e617438bd966e2b7bd884e110949f0d149d2cca0bf6326f2fa8c99e3a2c0f2d3cb3f145c8eeee4f060d17e3dded501ef8ec7f33
 DIST poppler-0.26.5.tar.xz 1595232 SHA256 de7de5fa337431e5d1f372e8577b3707322f1dbc1dc28a70f2927476f134d1ee SHA512 c374865809ed0c0ba43b4218f1e2185d1692a74a16aef722b2c6388bed7fbd8eef6e809f10fa061b90e8e35f28be2a5858d7dd6bf9d1c0c6e3c23ed8026688cc WHIRLPOOL 1e11d34d3a5f9a41f81609c65a3bbeb0e81b789d4d8b08ec9781e389284cf333ac959b6e510a490c98e28eb280fae2cf4362198456113a0a324efe2ce58226ff
-DIST poppler-0.30.0.tar.xz 1605292 SHA256 b616ee869d0b1f8a7a2c71cf346f55c1bff624cce4badebe17f506ec8ce7ddf5 SHA512 a6632e68a60b1ce898fe8c64ced575a6e5133557d1df0ce2c41b5e49c8923b36bfeb32937831810af9a3c8346444113313206826dcc769481d766a1b686def10 WHIRLPOOL cfdd48ecf09017ed1e520e3d8acc009b36d89a06cf2591c20d8dd3f57788885fdf74372e72a9f0174a7fad59572a2f60c15aec5caba9e5bcd08e6e92f9e9aff4
-DIST poppler-0.31.0.tar.xz 1607300 SHA256 943290270dca390d8f14467d54b06a25d9d6f70dc5853b0a9b89c62f74570694 SHA512 188093ed14b33a007f1934bcc36594cedd2a4c320ec94564deded3c9a904f09650517e66c34103f3f0068a1b59e3838e9a2596ab37647ffa78aa20dd526af9f2 WHIRLPOOL cdeee49f8052f2268b13b04254549569b74f1c971632ebda6a8a1003238dacc063a0c5cc9eee37da146c473a0b8cffbdc745e25e42c2c1a1662e0e0496f329aa
 DIST poppler-0.32.0.tar.xz 1609624 SHA256 4963e31ba5e17530a87b16588e22928bc044e8d28d02303dded981bff6725b98 SHA512 f68355a0242ce467b9d7d7f47cc0c3b08f015c38b147eaeddc392e693239bce2b1b3832bd5e5411f25edddab6d3cea8ca0be151372a86963610a4eae3ea50eee WHIRLPOOL bb56d497f435ccb78dfeb0125ca5d003d08769fe74e11da940f6f5399194698e1908c22d815129e6d1f1a7a9855a68ad7043a3bdd4779045fcf64dd97ade3d22
 EBUILD poppler-0.24.5.ebuild 2700 SHA256 839735037cc6fe4b54843027742f7a97254c838132d9e2dbbf03c0c7447c9431 SHA512 f0e7d3a804ac6569577a120717ca2a3e4331cdcacd345db2c733df95e7e56a2d9d99e09872f1e3ec56236c27fa31e37865ec97e31b325090898f41c2d4648d2e WHIRLPOOL 5fdb4db49ff52a87d53210bd8c525b7270000ab7d72f7811532e34f556ef0f46f4224866ab0eb60e1a0497accbdab3d5ee58c20eb029ff0e255898511c188c2b
 EBUILD poppler-0.26.5.ebuild 2668 SHA256 4645396a7b0e86adb16cf19be90cefe1745b5bd5813204ae62a2b31d1f7b1f8c SHA512 3a3a41ce24e79517a5020a3e03e26a3dd6f4f7587dfcdd69dc4fd9d8b3f025557d357e75dac23cde6bf65e55852f126b31b6e3dd47872e0e1608c74b6f5172d9 WHIRLPOOL f75829b78f474af4659a661ab6c5b39373725c903ef386c0b40b7f33d798c0d70728d1d53a7216725d7ffff7ce137d64c54cd3f730bcfeaac3a2c3dd96537cf3
-EBUILD poppler-0.30.0.ebuild 2853 SHA256 4d4c060061ca7077449fdd374b3abeafc12de24cf9a7915d8c455c377b2437f2 SHA512 e5bd5fcaea1d0ddab90c2db885917a54dba95f5ed86351fcf6fb45fff2e68143dc80d7f745b0805597ce170aeff80bb60c90b4b9bcce064147a3df04cdf3fb25 WHIRLPOOL 9f8f9c78926e687cabf16ec0a8b118f822e967778e9116029853060e5200c8f13579c5ed4e86c82430975a70220cdfc4d5f83bbbb3fde4562ea591cf229d5a42
-EBUILD poppler-0.31.0.ebuild 2853 SHA256 03301aef829e3b0fca17980d9166be9c917c4a15b18c0923b00601ea431cf0d9 SHA512 11f214cbfa10a02d0f9c58fbb2ff95763800c5c0a53197af39c7a2ef85ce61ab4a91c5f3fda7b2f626f5dc28e0e32ecd3ac0abbef43a567887f0ff50d82dbe19 WHIRLPOOL 9b1bba0bc80527d419fba56d67686f60bc4a5855496ca1e11d7cb153d76a681698d83025e9005020ee41d170df3cdb05e85d1a426b99227f4600222e502eba53
 EBUILD poppler-0.32.0.ebuild 2928 SHA256 ad2a41e28f0c3c1594b5a247a980bf211412e91f409a078a1f87d225ab7e8dd6 SHA512 6bec9e45d0ec327ae3adda7c88eaff966bdf9669afb9908cf1ce1bd76a2656ebce04fbb22ec36af63da225262a935e1d226dcc4f1238ce9413dd9d368ff62aa6 WHIRLPOOL ce934a7469baba536875a88d82b6f51bab25db5f97e445d94bf1b8a398bebba7ec43b1b097c22cf4e43ff642e582d421474d817c8304eb27ea47da7878c209ad
 EBUILD poppler-9999.ebuild 2945 SHA256 a47b56a7fae2ef35cde45a755cd0b0dd1f59a90842481936db3e2c81b3ef02c0 SHA512 fd4e98928b42a311d736a2ef75b81df1a6e1b3d1e2533ce4575dc9bbde38e3931d77d6b65006fbf6ef054034df361d5cadd87a11a3d561f26bd086e80ce89ed6 WHIRLPOOL 168f4a4ed1741dfbd2d907fe88ec15c3fe9f15b34b0ed2ee320ea995190d95cba7ea604e1860b5929c6b86fec5331a25d8bb82646ed2945bc5a95d53e3b10911
-MISC ChangeLog 61931 SHA256 226ce178e6a2867b72ba62f2b97e822b500425ecf2b7ef4c20e0dd0e98acb824 SHA512 c57a0a554d9409eeceec6b2911018ae18ff431db23c35e97edd9e32a5abe515ed65a8e4837e8e43bb348973dfcaa155b27ea18aedf30265837f59c21ea67fee4 WHIRLPOOL de881609888c5164cdb79d7f985b1f274075b17c29ecfc84de28ab4c9141dc1d670f54e98c13a5e7ca7e9755796e1f35e863633ad8c8a8decde99148694e9017
+MISC ChangeLog 62052 SHA256 358fa83f1c04b9cf232c5537de107684081880c8db1d4ff87dde3c31f5140d6a SHA512 2b35e4f01c405753f03b1068ab314d06a8fb150cc86395959e0ecc586ab37d4f9cb223ad21ee8e721ad78dc4fc31fbbdd838207369eabcf583034621427b2077 WHIRLPOOL 4d853e9a8566d7bad77383404ffc04888865e6b0b6e1aa47d68ee6ee0889f892dd17520ee80201b4aa05b7d1c3b3cacd08313ced5f16c6c5c08639737f4c5b25
 MISC metadata.xml 436 SHA256 11c2593e7d35deb49a1e6d7a5d08ba970b82a4071b7c5fcdc88645fa33c362a1 SHA512 6a82698c8890cd386d3011c003088f3f97f2a83aff0fde6ed13e38a3ed7ea99a3716da8a5b3f91ddcde617f8445d5ed95460011ac86101174479f640d93a7216 WHIRLPOOL 056ed300269a0ad2d9669f454b12569af79294a252b49f946bbf3cecc323485c3341895fc43bca91aedadaa7109909ec01f4c63b0c209115d8459c6ad05d8a91
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVDDrpAAoJEB9VdM6hupKV2tYP/2/65rwC6035zx1Nf/SPPLf4
-0+7T6meVZxEzOL1ndgGItAgfD9PoZeEZF7jKEUsTzyxNtrTYvEPQ10U8zMMK9sXA
-lmEFqflViYJjRqe7vGi4efoaJTFlAnU4ZW0OscG9+TDWA+UwuYKVkR5C162LI94Y
-5CF1Cghu2t6XZuA0ggeFlJbTuZf1Vk2CtcUaHOXD8b06yySiiaQd/F0omHCmKcBk
-5wDW1Vfaul+jYqphWk5f/BrJBA5egYUKavRS9OdH/Is9OWMP669txMS89W0xpB+C
-rxkOU83SkOYm1HphY1WKqXdTB2+g9urDrywHXCNrndaPenVoO33ReVP0i3Rffg5y
-4WP2ed7vlzENEwsvvvMOkGhTY4Zl8ZzJkpw0GXNTmNXtLPkB1eI5mKcx9CaHlROO
-vTbXrfM52Koc76FkE29pLP81znEaJ0mMuYXLrKzRFOV3ZXIXsRqxRThHmoSHY4At
-GwjI7bqoXmU39XaA64iJQrnFdHVJoCeEemd1pPwjsuaDTUwvYu7QOXM1DNW24vMT
-euflqpWCD+ED1r1KUkN10LMVBk5jchOLzu14KVkVcxqKcr7b79JahksryEczWmEj
-Y2ewLIXmAcY5vE/u8g36ja7h9RmYsCqPYycRWSEYTGOwO7VUiCirrgjhzSmHwJn7
-1TEIHk6KMG+T2UiMnyEi
-=Js/S
+iQJ8BAEBCABmBQJVH+QkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d57j4QAKSNWInM1iPvtV7ct3uav81u
+BHkUCeB/clvFwcSGnr5wUxaCh0y69T4xRiLjdph3WSax8o7pNtAaA6oyz4I+iPdo
+ht/TFoCucYwSeS/EyVyvIrzPMPxBaxrr0LyvrYZpb6a6eZw7kEAIKUMyJQa8VQSV
+btD+nrhZwJh/BmU012j5UpwHMPb7e1+7xB27ELYTb1ugQPI0Ol2lks/ho9PwAXE9
+RTb6fGz1BoY8Uy/Cjf8Wvl9d3LrBXpwyaeYuF1nO44X6MT9pYU0HV2lkLXlcDp20
+xoQbG+ThFyWwAc9WUgbGxF8uFl5l/EMV1SGd+umXH/veHsG9qHluugZvUgjS1nDh
+jKZlKC/+lX6x65GiZOUpuddOxyqAJ+RdZ7kYbmTSB9PKKgOM+URtjjRQzUf1l5kG
+HjnhT4v9i7DWuUWcZhpfadrQN4bNBnvBQKk9ZiOaI+HUo38KTntYcHvcnM6NT78/
+udrHL8BYavvpLTNSyn+lg3kRR23zXoRetih3JdlDCMYl6t7KmBuo6kweTvS1JYr7
+u5uHmFy6TykhbS3etUg2ON8Yd/tMzKDMtvv1acbZKBAg0IsuOVKu13a1eZxqIlcs
+X0avF207+P5ptmId7GMOF9Hs4n1XP30gyqhZDnwoCBPeo7xNFaKulZ7dugVzRtQP
+ytMKA7OJ3ZfwcSbbwZ0+
+=FwlC
 -----END PGP SIGNATURE-----
