@@ -1,18 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX tix-8.4.3-link.patch 402 SHA256 d4992c9d78b90c8e2ae79b1be63218f6d05cfbce31cc5ceadb5bb54571cb9696 SHA512 e220035cc8d71592dfe72e73e1fb92f79f7750b5c8a97d749bdb67aef9488a3684aad7873041ba6054083287c758889cb243d6cac5b83281f738b1392f29a821 WHIRLPOOL 2be7a639fd78020e79a6bb9d340113e58efe78c8ac491ba34ab48fda5a9668cee0b511af756af702b0dffe267993935af5f7b9570d5c50cdd25a7853faed0008
 AUX tix-8.4.3-tcl8.5.patch 6808 SHA256 435f96d7ae0cceab7b09b9b7630a2f51766fb36dd09c2ab84d7d4509365393a7 SHA512 e3dacb53df3852c195306f9d7220f931592ea3ec606b121ac02e3b4f84684efb9da9cae4e51e4fb3b818d7277860bf72378fe63ae835d9eb3a2b7539aee9f9cd WHIRLPOOL aca539ace69d8cd97958bb35ad702398c3eb7e2ce2bfabf9d02ca4b940bf88ce1c7a31dd3fd7eca5a14e4fd6a037c2aee3cbd3ac8687078bedb92f6dd78cb7e0
 AUX tix-8.4.3-tcl8.6.patch 665 SHA256 9c8d7b07d6d5e98c66485d9c3e68ef1b816232c1630590a2f4df0e03a20bcff7 SHA512 3b390b551c6d59d4af695d5c60c8c47c9dc270f97b5e8fd8dab23540c2c0f41b2ef2a43d6dc21249930f294354012718866bcbf773f58c43df7c5e8ee8f22f9e WHIRLPOOL c0b18f5012ea432ceef376ecb646a6ea2b79cb8ca4c21f9f347a6367f8c37054694df97e4ad8e7f72a54ec63b5fafdea09560a4397b13cf3e0341ec2841b4a38
 DIST Tix8.4.3-src.tar.gz 1831503 SHA256 562f040ff7657e10b5cffc2c41935f1a53c6402eb3d5f3189113d734fd6c03cb SHA512 f13217dad0f52c0b706d2fb8ee0886942db64be0325e5d0d51801dbf9a92a7919c743c1445b76dbfa98815817685205e238e2d63f9366a8745ace1e1e9a01852 WHIRLPOOL 5f72582d30eb1be27b3e5a9d7a49b5e5b46d7d8a0bdd1228c592c1b2192bf0d627f50b63990c8bd43f0e2713d61e7e903bdedd8135f5ef67464d51bd6f23110a
 EBUILD tix-8.4.3-r1.ebuild 1476 SHA256 d70834f58a16e9eb16b6f5fbd75605c0ab905b987817df4a40b5debc86f9bf40 SHA512 d79a5b76a9dbc4971e0b1fec8533dadd6da9b543d27f1df67ed2886e2f6bdcf7a708ddab145cd4bc14f6d5dc01fce4a5b3929d9dda7918c472be1becf334a424 WHIRLPOOL 3c0fa2ad02615d0386abfcfe05cdb1f60fc74637c25529ed40149ca9884d46cb2335f7a43748c35f9747b592b170506405552dda77d5041f4f53f97efc02f82d
-EBUILD tix-8.4.3.ebuild 1450 SHA256 0eb775113e3bbb9b90a9be753713cbc2e9fcff745fe5b4989e0684634fd70ef3 SHA512 d732be1bdc2d25896b0bc8f041395a38bb467c458facb3143d6caf5c29bc489a7f9bf6194bb71cd3620e289bece6d42e1be3faf89efd0073e447562707c02d94 WHIRLPOOL a806863cc7a32b7427cc73ae6d19f4e50b0d996b9add8425abcd4358f42759a323a19e67b0bc790953c1b26a1f75ebda678a80752c9d10305fc2e2af44b8c21f
-MISC ChangeLog 6405 SHA256 26adff2712750480dfb8d52cf9aad6ec627d306912d12a2ccceb868975bfcf38 SHA512 f0be21c1cd7ef35f30b9dda72d82cfb0e26557952d3004211ad4496b8b38a865a709073ab1dd82512774affcedc79058e2a1cf87661e14bf1d5d4ba325424b0a WHIRLPOOL 4b0f3c6b648839d83d7ebc2907406d51f26232806e184b46784f5d46498b6009045df679c6ac42042d590f5fdfc7024653c54c1cf6c5a76ae37ba7dc1c7a6e6e
+MISC ChangeLog 6485 SHA256 e7bf6aeecf7134ebc2a7981a5f4b20b8e3b60271b2360021e5a3fca6645d20e6 SHA512 f2431756ea448f97bf176a960194cee7379bd289b35717d8da87adc52131b5b8113d65cd733c051b43b41c14546cdb76217998796682a80019a30be97c620d1a WHIRLPOOL 38ef8411fe3834a9184099deb1b97b35bffd1b21418554de5f152d94fec50bfb3c5f8d7df8f08816bb8d7c0997a3817ba2315985d9f7f64755f75574b26ddd32
 MISC metadata.xml 160 SHA256 225a6f78d287329cdf2f4ed57468be28bd6565fd9a62207c2cc48e25ac9d3537 SHA512 a50627bda9ed953daf422b5a2e89b5b64e296d1a023d767c8a4ebb2cd51cd0036cecce455762a54e7d669f94d17d9de21052bac94fc08b1365ef42eb2f267742 WHIRLPOOL 61fa22d50aaf2bdecc467e26c9675cf7949ad55a4a8821730c91d1bd73f83fc4c35660851961310efa450e337a7ef572a925e186b8b05984d6315efc509fd365
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUfnA4ACgkQVWmRsqeSphPzSACfWtXycTaVj4V1+jnbOt2q0tF0
-j/0AnRGYGktK3+Is6fKlV3svs8cbOLZL
-=6rM9
+iQJ8BAEBCgBmBQJVH+DOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirE1wP/0lvHhSsi29Fr274LCgQAUhu
+4cPeDZRtbnNI6yI0vKoemxazItKtdLEfYqgJRKzXrDTbI9umFjWjCwXdOWY7RyA0
+WSIe128CS8h03RtxTkSFq4zx6Bg6X1GuYaM2Qw3SdDO6tYh8pdlFFw0JBHOFXYaw
+iUyh1mSJrlzQGIwuUrh443X+pBv6mH2OMDHG+QxgXaEy9IeqZ76jMLBjgKCS0xAw
+sFr4I0leOo8h06krxM5iqSVhc0AEU1YpTfM/uWbGC86yI3i2Yq5jiBnDxROZqBZt
+AqCus3pdJml9wYYoJQYUsR+wKDmmIom1z1Wj3STetWQTR3PTUS8FY9/skfkXswb1
+WGPmi1ywwQR7OcGnxS9MgCYgRiLf6Ri8hHqQT9WD5XnQk4F8u0z1bt5yd2s9Ycsj
+ND33m4ZRk+1hBwpRypDaExYU4o69vqdtzOsgcc8WwGtZoaPEeXbQbB5RWb4ND8vz
+ypfeglQwkuasIsqL5kD5fyJbO5Umum6nbMwPBgFbSGKAIpJccm71dqFusexxNoW4
+GHWOTRbEFxlkLOp6dKqcAQ+dmSYgPU/cTzFD3JOWzgIAPB+/S55ihJhVmwaGRrwq
+ob91+/dXA2Twpg1d+jgscLt5xCDQfDYLZZCOJZKtDRNtAIy1HbpwmWo7RcVLKmZt
+lMnF+irKeupLddTfipYA
+=uIr2
 -----END PGP SIGNATURE-----
