@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=dev-lang/tk sys-apps/sed x11-libs/libX11 x11-libs/libXau x11-libs/libXdmcp
-DESCRIPTION=A widget library for Tcl/Tk
-EAPI=5
-HOMEPAGE=http://tix.sourceforge.net/
-KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x64-macos ~x86-macos
-LICENSE=BSD
-RDEPEND=dev-lang/tk sys-apps/sed x11-libs/libX11 x11-libs/libXau x11-libs/libXdmcp
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://sourceforge/tix/Tix8.4.3-src.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=5b585cbd212263b53f07e09b658c9361
