@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tix
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tix/ChangeLog,v 1.53 2015/04/04 08:08:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tix/ChangeLog,v 1.54 2015/04/04 13:02:02 jlec Exp $
+
+  04 Apr 2015; Justin Lecher <jlec@gentoo.org> -tix-8.4.3.ebuild:
+  Clean old
 
   04 Apr 2015; Jeroen Roovers <jer@gentoo.org> tix-8.4.3-r1.ebuild:
   Stable for HPPA (bug #545428).
