@@ -1,6 +1,10 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.446 2015/03/20 15:18:23 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.447 2015/04/04 13:16:14 dilfridge Exp $
+
+  04 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -poppler-0.30.0.ebuild, -poppler-0.31.0.ebuild:
+  Remove old
 
   20 Mar 2015; Andreas K. Huettel <dilfridge@gentoo.org> poppler-0.32.0.ebuild,
   poppler-9999.ebuild:
